Remove RSS feed links from footer

--- a/config.toml
+++ b/config.toml
@@ -16,7 +16,7 @@ pygmentscodefences  = true
   disableWebFonts = false
   poweredby = false
   submitted= true
-  feedlinks= true
+  feedlinks = false
   cookieConsent= true
   favicon= "apple-touch-icon.png"
 #  sidebar= true
