Reduce logo size to 200px width

--- a/config.toml
+++ b/config.toml
@@ -13,6 +13,7 @@ pygmentscodefences  = true
 
 [params]
   sitename = "Techtalks"
+  logoWidth = 200
   disableWebFonts = false
   poweredby = false
   submitted= true
