Hide site name text, show only logo

--- a/config.toml
+++ b/config.toml
@@ -12,7 +12,7 @@ pygmentsstyle       = "bw"
 pygmentscodefences  = true
 
 [params]
-  sitename = "Techtalks"
+  sitename = false
   logoWidth = 200
   disableWebFonts = false
   poweredby = false
